--- a/switch.css
+++ b/switch.css
@@ -1,72 +1,83 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-    background: #bdbdc7;
-    margin: 0 0;
-    padding: 70px 0;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    width: 100%;
-    margin-top: 100px;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+}
+
+.toggle-container {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+  width: 200px;
+}
+
+.toggle {
+  visibility: hidden;
+}
+
+.label {
+  position: relative;
+  background-color: #d0d0d0;
+  border-radius: 50px;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 15px 0;
+  width: 80px;
+  height: 40px;
+}
+
+.toggle:checked + .label {
+  background-color: #8e44ad;
+}
+
+.ball {
+  background: #fff;
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  align-items: center;
+  justify-content: center;
+  animation: slideOff 0.3s linear forwards;
+}
+
+.toggle:checked + .label .ball {
+  animation: slideOn 0.3s linear forwards;
+}
+
+@keyframes slideOn {
+  0% {
+    transform: translateX(0) scale(1);
   }
-  
-  .checkbox {
-    display: inline-block;
-    position: relative;
-    text-align: left;
-    width: 110px;
-    height: 60px;
-    background-color: #484850;
-    overflow: hidden;
-    box-shadow: inset 0 10px 25px rgba(0, 0, 0, .5), 0px 1px 2px #fff;
-    border-radius: 50px;
-    margin: 10px;
+  50% {
+    transform: translateX(20px) scale(1.2);
   }
-  
-  .checkbox input {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    margin: 0 0;
-    cursor: pointer;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    z-index: 2;
+  100% {
+    transform: translateX(40px) scale(1);
   }
-  
-  .checkbox label {
-    background-color: #151b29;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.7);
-    border-radius: 40px;
-    display: inline-block;
-    width: 53px;
-    height: 53px;
-    text-align: center;
-    font: bold 15px/50px Arial, Sans-Serif;
-    color: #999;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.7);
-    transition: margin-left 0.2s ease-in-out;
-    margin: 3px;
+}
+
+@keyframes slideOff {
+  0% {
+    transform: translateX(40px) scale(1);
   }
-  
-  .checkbox label:before {
-    content: attr(data-off);
+  50% {
+    transform: translateX(20px) scale(1.2);
   }
-  
-  .checkbox input:checked + label {
-    margin-left: 54px;
-    /* green when 'on' 
-            background-color: #429f21;
-            */
-    /* blue when 'on' */
-    background-color: #0088cc;
-    color: white;
+  100% {
+    transform: translateX(0) scale(1);
   }
-  
-  .checkbox input:checked + label:before {
-    content: attr(data-on);
-  }
+}
